--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
                 </div><br><br><br>
                 <section class="photos">
                     <div class="photos-section full-deck"></div>
+                </section>
+                <section>
                     <div class="row" id="start">
                         <div class="col-md-6 col-md-offset-3 text-center">
                             <img src="img/eye.svg" class="icon animated fadeInUp" alt="Section Header">
                             <h1 class="animated fadeInUp">Introduction</h1>
                             <p class="animated fadeInUp">The universe of Iubris is an old and volatile world. It is home to a myriad races fighting for control of territory and people for power, glory, or their gods. More</p>
                         </div>
-                    </div>
-                </section><br><br>
-                <section>
+                    </div><br><br>
                     <div class="row" id="start">
                         <div class="col-md-6 col-md-offset-3 text-center">
                             <img src="img/scroll.svg" class="icon animated fadeInUp" alt="Section Header">
