--- a/index.html
+++ b/index.html
@@ -51,17 +51,61 @@
                 <section>
                     <div class="row" id="start">
                         <div class="col-md-6 col-md-offset-3 text-center">
-                            <img src="img/eye.svg" class="icon animated fadeInUp" alt="Section Header">
+                            <img src="../img/i.svg" class="icon animated fadeInUp" alt="Section Header">
                             <h1 class="animated fadeInUp">Introduction</h1>
-                            <p class="animated fadeInUp">The universe of Iubris is an old and volatile world. It is home to a myriad races fighting for control of territory and people for power, glory, or their gods. More</p>
+                            <p class="animated fadeInUp">The universe of Iubris is an old and volatile world. It is home to a myriad races fighting for control of territory and people for power, glory, or their gods. </p>
                         </div>
                     </div><br><br>
-                    <div class="row" id="start">
+                    <div class="row" id="menu">
+                        <div class="col-md-6 col-md-offset-3 text-center subject">
+                            <img src="img/closed.svg" class="icon animated fadeInUp" alt="Section Header">
+                            <h1 class="animated fadeInUp">Subjects</h1>
+                            <p class="animated fadeInUp">Click below to access the various subjects there is lore material about. The last category, "Literature", is a compiled list of works written on or about Iubris.</p>
+                            <div class="col-md-4">
+                                <img src="img/book.svg" class="icon-sm animated fadeInUp" alt="Section Header"><br>
+                                <h3 class="animated fadeInUp"><a href="history/index.html">History</a></h3>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="img/globe.svg" class="icon-sm animated fadeInUp" alt="Section Header"><br>
+                                <h3 class="animated fadeInUp"><a href="geography/index.html">Geography</a></h3>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="img/culture.svg" class="icon-sm animated fadeInUp" alt="Section Header"><br>
+                                <h3 class="animated fadeInUp"><a href="culture/index.html">Culture</a></h3>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="img/language.svg" class="icon-sm animated fadeInUp" alt="Section Header"><br>
+                                <h3 class="animated fadeInUp"><a href="language/index.html">Language</a></h3>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="img/eye.svg" class="icon-sm animated fadeInUp" alt="Section Header"><br>
+                                <h3 class="animated fadeInUp"><a href="religion/index.html">Religion</a></h3>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="img/magic.svg" class="icon-sm animated fadeInUp" alt="Section Header"><br>
+                                <h3 class="animated fadeInUp"><a href="magic/index.html">Magic</a></h3>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="img/war.svg" class="icon-sm animated fadeInUp" alt="Section Header"><br>
+                                <h3 class="animated fadeInUp"><a href="war/index.html">War</a></h3>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="img/people.svg" class="icon-sm animated fadeInUp" alt="Section Header"><br>
+                                <h3 class="animated fadeInUp"><a href="people/index.html">People</a></h3>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="img/literature.svg" class="icon-sm animated fadeInUp" alt="Section Header"><br>
+                                <h3 class="animated fadeInUp"><a href="literature/index.html">Literature</a></h3>
+                            </div>
+                        </div>
+                    </div><br><br>
+                    <div class="row" id="thanks">
                         <div class="col-md-6 col-md-offset-3 text-center">
                             <img src="img/scroll.svg" class="icon animated fadeInUp" alt="Section Header">
                             <h1 class="animated fadeInUp">Thank You</h1>
-                            <p class="animated fadeInUp">I've been working on this universe, Iubris, for as long as I can remember. I still have scant memories of me as a little girl lying on rocks and looking up at the Icelandic sky turning the mythological stories of my ancestors into a world of my own. I use to imagine alternative stories to those my family told about the Æsir and Vanir; eventually making up my own version of Nordic mythology in my head. Around my early teens, I began to become really interested in fantasy books, especially with Tolkien and picked up a fascination with western esotericism and early Christianity. I combined these two newfound interests with my alterante mythology and that's where the world of Iubris really began.</p>
-                            <p class="animated fadeInUp">In my late adolescence I became enamoured with classical literature and poetry and began to compose poems and write short stories based on events in Iubris. This collection of literature on Iubris has grown to a sizeable amount. MORE TO BE WRITTEN.</p>
+                            <p class="animated fadeInUp">This page is unfinished. Please wait.</p>
+                            <!--<p class="animated fadeInUp">I've been working on this universe, Iubris, for as long as I can remember. I still have scant memories of me as a little girl lying on rocks and looking up at the Icelandic sky turning the mythological stories of my ancestors into a world of my own. I use to imagine alternative stories to those my family told about the Æsir and Vanir; eventually making up my own version of Nordic mythology in my head. Around my early teens, I began to become really interested in fantasy books, especially with Tolkien and picked up a fascination with western esotericism and early Christianity. I combined these two newfound interests with my alterante mythology and that's where the world of Iubris really began.</p>
+                            <p class="animated fadeInUp">In my late adolescence I became enamoured with classical literature and poetry and began to compose poems and write short stories based on events in Iubris. This collection of literature on Iubris has grown to a sizeable amount. MORE TO BE WRITTEN.</p>-->
                             <p class="signature animated fadeInUp">YOURS WITH LOVE,<br><span class="blue">FREYJA</span></p>
                         </div>
                     </div>
