--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <section>
                     <div class="row" id="start">
                         <div class="col-md-6 col-md-offset-3 text-center">
-                            <img src="../img/i.svg" class="icon animated fadeInUp" alt="Section Header">
+                            <img src="img/i.svg" class="icon animated fadeInUp" alt="Section Header">
                             <h1 class="animated fadeInUp">Introduction</h1>
                             <p class="animated fadeInUp">The universe of Iubris is an old and volatile world. It is home to a myriad races fighting for control of territory and people for power, glory, or their gods. </p>
                         </div>
